--- a/DoctorAppointments/DoctorAppointments.csproj
+++ b/DoctorAppointments/DoctorAppointments.csproj
@@ -238,6 +238,8 @@
     <Content Include="Views\Patients\Index.cshtml" />
     <Content Include="Views\Shared\ApplicationLayout.cshtml" />
     <Content Include="Views\Login\Index.cshtml" />
+    <Content Include="Views\Admins\AdminHome.cshtml" />
+    <Content Include="Views\Patients\HomePage.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
