--- a/DoctorAppointments/DoctorAppointments.csproj
+++ b/DoctorAppointments/DoctorAppointments.csproj
@@ -173,6 +173,7 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\loginusers.css" />
     <Content Include="Content\signin.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
@@ -242,6 +243,8 @@
     <Content Include="Views\Admins\AdminHome.cshtml" />
     <Content Include="Views\Patients\HomePage.cshtml" />
     <Content Include="Views\Admins\UserRegistration.cshtml" />
+    <Content Include="Views\Patients\PreviousAppointments.cshtml" />
+    <Content Include="Views\Doctors1\AppointmentSchedule.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
