--- a/DoctorAppointments/DoctorAppointments.csproj
+++ b/DoctorAppointments/DoctorAppointments.csproj
@@ -174,6 +174,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\loginusers.css" />
+    <Content Include="Content\search.css" />
     <Content Include="Content\signin.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
@@ -245,6 +246,9 @@
     <Content Include="Views\Admins\UserRegistration.cshtml" />
     <Content Include="Views\Patients\PreviousAppointments.cshtml" />
     <Content Include="Views\Doctors1\AppointmentSchedule.cshtml" />
+    <Content Include="Views\Patients\SearchForDate.cshtml" />
+    <Content Include="Views\Patients\CancelAppointments.cshtml" />
+    <Content Include="Views\Patients\CloseAppointment.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
