--- a/DoctorAppointments/DoctorAppointments.csproj
+++ b/DoctorAppointments/DoctorAppointments.csproj
@@ -173,6 +173,7 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\cancel.css" />
     <Content Include="Content\loginusers.css" />
     <Content Include="Content\search.css" />
     <Content Include="Content\signin.css" />
@@ -249,6 +250,9 @@
     <Content Include="Views\Patients\SearchForDate.cshtml" />
     <Content Include="Views\Patients\CancelAppointments.cshtml" />
     <Content Include="Views\Patients\CloseAppointment.cshtml" />
+    <Content Include="Views\Appointments\PrevAppointments.cshtml" />
+    <Content Include="Views\Appointments\CancelAppointments.cshtml" />
+    <Content Include="Views\Appointments\CancelAppointmentsDoc.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
